--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,30 @@
 blinker==1.8.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
+coverage==7.5.4
 Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+idna==3.7
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.5
 MarkupSafe==2.1.5
+mock==5.1.0
+packaging==24.1
+parse==1.20.2
+parse-type==0.6.2
+pluggy==1.5.0
+pytest==8.2.2
+pytest-bdd==7.2.0
+pytest-cov==5.0.0
+pytest-mock==3.14.0
+requests==2.32.3
+six==1.16.0
 SQLAlchemy==2.0.31
 typing_extensions==4.12.2
+urllib3==2.2.2
 Werkzeug==3.0.3
